force-app/main/default/objects/Account/fields/Direccion_provincia_pais__c.field-meta.xml
<CustomField>
    <fullName>Direccion_provincia_pais__c</fullName>
    <formula>Codigo_postal_service__r.Provincia__c + &apos;, &apos; +  Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección provincia + país</label>
    <type>Text</type>
</CustomField>