force-app/main/default/objects/Account/fields/Direccion_Secundaria__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Secundaria__c</fullName>
    <description>Direccion secundaria para pacientes de NSJ</description>
    <label>Dirección Secundaria</label>
    <length>35</length>
    <type>Text</type>
</CustomField>