force-app/main/default/objects/Account/fields/Direccion_sociedad_stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Direccion_sociedad_stakeholders__c</fullName>
    <label>Dirección</label>
    <length>100</length>
    <type>Text</type>
</CustomField>