force-app/main/default/objects/Account/fields/DISTRIBUTIONCHANNELID__c.field-meta.xml
<CustomField>
    <fullName>DISTRIBUTIONCHANNELID__c</fullName>
    <label>Canal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>