force-app/main/default/objects/Account/fields/DIVISIONID__c.field-meta.xml
<CustomField>
    <fullName>DIVISIONID__c</fullName>
    <label>División</label>
    <length>255</length>
    <type>Text</type>
</CustomField>