force-app/main/default/objects/Account/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <label>DNI</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>