force-app/main/default/objects/Account/fields/Docente_en_la_Universidad__c.field-meta.xml
<CustomField>
    <fullName>Docente_en_la_Universidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docente en la Universidad</label>
    <type>Checkbox</type>
</CustomField>