force-app/main/default/objects/Account/fields/Domicilio_de_la_obra_social_Partner_M__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_de_la_obra_social_Partner_M__c</fullName>
    <inlineHelpText>Se autocompleta solo al cambiar la obra social.</inlineHelpText>
    <label>Domicilio de la obra social</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>