force-app/main/default/objects/Account/fields/duracion_modulos__c.field-meta.xml
<CustomField>
    <fullName>duracion_modulos__c</fullName>
    <formula>ultimo_modulo_hasta__c - Alta_Modulo_Desde__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>duracion modulos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>