force-app/main/default/objects/Account/fields/Edad_baja__c.field-meta.xml
<CustomField>
    <fullName>Edad_baja__c</fullName>
    <formula>IF( and(NOT( ISBLANK( PersonBirthdate ) ), DATE( YEAR( PersonBirthdate ), MONTH( PersonBirthdate ) , DAY( PersonBirthdate ) ) &lt;= DATE( YEAR(Fecha_de_cambio_de_estado__c), MONTH(Fecha_de_cambio_de_estado__c) , DAY(Fecha_de_cambio_de_estado__c) )), YEAR (Fecha_de_cambio_de_estado__c) - YEAR ( PersonBirthdate ),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad baja</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>