force-app/main/default/objects/Account/fields/Edad_del_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Edad_del_Profesional__c</fullName>
    <formula>FLOOR((TODAY()- PersonBirthdate +1)/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>