force-app/main/default/objects/Account/fields/Email_para_consentimiento__c.field-meta.xml
<CustomField>
    <fullName>Email_para_consentimiento__c</fullName>
    <label>Email para consentimiento</label>
    <type>Email</type>
</CustomField>