force-app/main/default/objects/Account/fields/Email_para_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Email_para_Workflow__c</fullName>
    <label>Email para Workflow</label>
    <type>Email</type>
</CustomField>