force-app/main/default/objects/Account/fields/Empresa_de_internacion_domiciliaria__c.field-meta.xml
<CustomField>
    <fullName>Empresa_de_internacion_domiciliaria__c</fullName>
    <label>Empresa de internación domiciliaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best care</fullName>
            </value>
            <value>
                <fullName>Priority home care S.R.L.</fullName>
            </value>
            <value>
                <fullName>Proyecto salud S.R.L.</fullName>
            </value>
            <value>
                <fullName>En casa - servicios de atencion domiciliaria S.A.</fullName>
            </value>
            <value>
                <fullName>Salud activa S.A.</fullName>
            </value>
            <value>
                <fullName>Salud en el hogar S.R.L.</fullName>
            </value>
            <value>
                <fullName>Salud integral S.R.L.</fullName>
            </value>
            <value>
                <fullName>Sanity care internacion domiciliaria S.R.L.</fullName>
            </value>
            <value>
                <fullName>Sidom S.A.</fullName>
            </value>
            <value>
                <fullName>Valuar salud S.A</fullName>
            </value>
            <value>
                <fullName>Erfolg salud S.R.L</fullName>
            </value>
            <value>
                <fullName>Cimac S.A.</fullName>
            </value>
            <value>
                <fullName>Bienestar en casa S.A.</fullName>
            </value>
            <value>
                <fullName>Equisalud S.R.L.</fullName>
            </value>
            <value>
                <fullName>Red gama S.R.L.</fullName>
            </value>
            <value>
                <fullName>Centrum salud S.A.</fullName>
            </value>
            <value>
                <fullName>Cuidar salud S.R.L.</fullName>
            </value>
            <value>
                <fullName>San francisco S.R.L.</fullName>
            </value>
            <value>
                <fullName>Clinica punta indio S.R.L.</fullName>
            </value>
            <value>
                <fullName>Saluritas</fullName>
            </value>
            <value>
                <fullName>Cuidarte argentina S.A.</fullName>
            </value>
            <value>
                <fullName>Idom S.A.</fullName>
            </value>
            <value>
                <fullName>Palcare</fullName>
            </value>
            <value>
                <fullName>Recuperarse en familia</fullName>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>