force-app/main/default/objects/Account/fields/Empresa_de_internacion_domiciliaria_bc__c.field-meta.xml
<CustomField>
    <fullName>Empresa_de_internacion_domiciliaria_bc__c</fullName>
    <defaultValue>&apos;Best Care&apos;</defaultValue>
    <label>Empresa de internación domiciliaria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>