force-app/main/default/objects/Account/fields/encuesta_enriquece_nutricion__c.field-meta.xml
<CustomField>
    <fullName>encuesta_enriquece_nutricion__c</fullName>
    <formula>HYPERLINK( &apos;http://danoneencuestas.force.com/TakeSurvey?id=a051I00000ArGjFQAV&amp;cId=&apos;+ Contact_Id__c +&apos;&amp;caId=none&apos;,&apos;Encuesta&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>encuesta enriquece nutricion</label>
    <type>Text</type>
</CustomField>