force-app/main/default/objects/Account/fields/Encuesta_Meta__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_Meta__c</fullName>
    <formula>HYPERLINK( &apos;http://danoneencuestas.force.com/TakeSurvey?id=a051I000007wORrQAM&amp;cId=&apos;+ Contact_Id__c +&apos;&amp;caId=none&apos;,&apos;Encuesta&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encuesta - Meta</label>
    <type>Text</type>
</CustomField>