force-app/main/default/objects/Account/fields/Encuesta_NPS_Best_Care__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_NPS_Best_Care__c</fullName>
    <formula>HYPERLINK( &apos;http://danoneencuestas.force.com/TakeSurvey?id=a051I000005CYeeQAG&amp;cId=&apos;+ Contact_Id__c +&apos;&amp;caId=none&apos;,&apos;Encuesta&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encuesta NPS Best Care</label>
    <type>Text</type>
</CustomField>