force-app/main/default/objects/Account/fields/Enfermero_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Enfermero_Asignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enfermero Asignado</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Title</field>
            <operation>contains</operation>
            <value>Enferme</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Enfermero</relationshipName>
    <type>Lookup</type>
</CustomField>