force-app/main/default/objects/Account/fields/Entre_Calles__c.field-meta.xml
<CustomField>
    <fullName>Entre_Calles__c</fullName>
    <label>Entre Calles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>