force-app/main/default/objects/Account/fields/Equipo_de_futbol__c.field-meta.xml
<CustomField>
    <fullName>Equipo_de_futbol__c</fullName>
    <label>Equipo de fútbol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>