force-app/main/default/objects/Account/fields/Equipo_de_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Equipo_de_Profesional__c</fullName>
    <label>Equipo de Profesional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>