force-app/main/default/objects/Account/fields/Es_considerado_KOL_o_Referente__c.field-meta.xml
<CustomField>
    <fullName>Es_considerado_KOL_o_Referente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es considerado KOL o Referente</label>
    <type>Checkbox</type>
</CustomField>