force-app/main/default/objects/Account/fields/Es_drogueria__c.field-meta.xml
<CustomField>
    <fullName>Es_drogueria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es droguería</label>
    <type>Checkbox</type>
</CustomField>