force-app/main/default/objects/Account/fields/Es_residente__c.field-meta.xml
<CustomField>
    <fullName>Es_residente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es residente</label>
    <type>Checkbox</type>
</CustomField>