force-app/main/default/objects/Account/fields/Escribio_trabajos_cientificos__c.field-meta.xml
<CustomField>
    <fullName>Escribio_trabajos_cientificos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escribió trabajos científicos</label>
    <type>Checkbox</type>
</CustomField>