force-app/main/default/objects/Account/fields/Espacio_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Espacio_de_visita__c</fullName>
    <label>Espacio de visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultorio</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Institución</fullName>
            </value>
            <value>
                <fullName>Obra Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>