force-app/main/default/objects/Account/fields/Esta_dado_de_alta_como_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Esta_dado_de_alta_como_proveedor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Está dado de alta como proveedor?</label>
    <type>Checkbox</type>
</CustomField>