force-app/main/default/objects/Account/fields/Esta_escribiendo_algun_trabajo__c.field-meta.xml
<CustomField>
    <fullName>Esta_escribiendo_algun_trabajo__c</fullName>
    <label>¿Está escribiendo algún trabajo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>