force-app/main/default/objects/Account/fields/Estado_cliente__c.field-meta.xml
<CustomField>
    <fullName>Estado_cliente__c</fullName>
    <label>Estado cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>