force-app/main/default/objects/Account/fields/Estado_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_paciente__c</fullName>
    <label>Estado de paciente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inicio</fullName>
                <default>true</default>
                <label>Inicio</label>
            </value>
            <value>
                <fullName>En Seguimiento</fullName>
            </value>
            <value>
                <fullName>En tratamiento</fullName>
            </value>
            <value>
                <fullName>No tratamiento</fullName>
            </value>
            <value>
                <fullName>Fin de tratamiento</fullName>
            </value>
            <value>
                <fullName>Excluido</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>