force-app/main/default/objects/Account/fields/Estado_del_consentimiento__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_consentimiento__c</fullName>
    <label>Estado del consentimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En curso</fullName>
            </value>
            <value>
                <fullName>Aceptado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>