force-app/main/default/objects/Account/fields/Estado_del_ultimo_modulo__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_ultimo_modulo__c</fullName>
    <label>Estado del ultimo modulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>