force-app/main/default/objects/Account/fields/Estado_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Estado_sucursal__c</fullName>
    <label>Estado sucursal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>