force-app/main/default/objects/Account/fields/Excento_o_agravado__c.field-meta.xml
<CustomField>
    <fullName>Excento_o_agravado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excento o agravado</label>
    <type>Checkbox</type>
</CustomField>