force-app/main/default/objects/Account/fields/EYN__c.field-meta.xml
<CustomField>
    <fullName>EYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si pertenece a Enrich your nutrition</description>
    <label>EYN</label>
    <type>Checkbox</type>
</CustomField>