force-app/main/default/objects/Account/fields/Fact_Agrupada__c.field-meta.xml
<CustomField>
    <fullName>Fact_Agrupada__c</fullName>
    <label>Fact.Agrupada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>