force-app/main/default/objects/Account/fields/Fact_Agrupada_Per__c.field-meta.xml
<CustomField>
    <fullName>Fact_Agrupada_Per__c</fullName>
    <label>Fact.Agrupada.Per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>