force-app/main/default/objects/Account/fields/Fact_Agrupada_Per_paciente__c.field-meta.xml
<CustomField>
    <fullName>Fact_Agrupada_Per_paciente__c</fullName>
    <formula>IF(RecordType.Name =&apos;Paciente Best Care&apos; || RecordType.Name = &apos;Paciente Partner&apos;,

IF(TEXT(Obra_social__pr.Fact_Agrupada_Per__c)=null ,&apos;&apos;,TEXT(Obra_social__pr.Fact_Agrupada_Per__c) )

,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact.Agrupada.Per</label>
    <type>Text</type>
</CustomField>