force-app/main/default/objects/Account/fields/Fecha_actualizacion_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Fecha_actualizacion_sucursal__c</fullName>
    <label>Fecha actualización sucursal</label>
    <type>Date</type>
</CustomField>