force-app/main/default/objects/Account/fields/Fecha_creacion_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Fecha_creacion_sucursal__c</fullName>
    <label>Fecha creación sucursal</label>
    <type>Date</type>
</CustomField>