force-app/main/default/objects/Account/fields/Fecha_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_baja__c</fullName>
    <description>Debe ser obligatorio cuando se cambia al estado y todos los subestado de &apos;&apos;No tratamiento&apos;&apos; o &apos;&apos;Fin de tratamiento&apos;&apos; menos con el subestado &apos;&apos;Fallecido&apos;&apos;.</description>
    <label>Fecha de baja.</label>
    <type>Date</type>
</CustomField>