force-app/main/default/objects/Account/fields/Fecha_de_cambio_de_estado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cambio_de_estado__c</fullName>
    <label>Fecha de cambio de estado</label>
    <type>Date</type>
</CustomField>