force-app/main/default/objects/Account/fields/Fecha_de_confirmacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_confirmacion__c</fullName>
    <description>Se completa automáticamente con la fecha en la que se marca el checkbox &quot;Paciente confirmado por PSP&quot;</description>
    <label>Fecha de confirmación</label>
    <type>Date</type>
</CustomField>