force-app/main/default/objects/Account/fields/Fecha_de_externacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_externacion__c</fullName>
    <label>Fecha de externación</label>
    <type>Date</type>
</CustomField>