force-app/main/default/objects/Account/fields/Fecha_de_Inicio_Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Inicio_Seguimiento__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha de Inicio Seguimiento</label>
    <type>Date</type>
</CustomField>