force-app/main/default/objects/Account/fields/Fecha_de_obito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_obito__c</fullName>
    <label>Fecha de baja</label>
    <type>Date</type>
</CustomField>