force-app/main/default/objects/Account/fields/Fecha_de_ultima_actividad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_ultima_actividad__c</fullName>
    <label>Fecha de ultima actividad</label>
    <type>Date</type>
</CustomField>