force-app/main/default/objects/Account/fields/Fecha_de_vencimiento_del_CD__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vencimiento_del_CD__c</fullName>
    <inlineHelpText>&apos;CD&apos; quiere decir Certificado de Discapacidad</inlineHelpText>
    <label>Fecha de vencimiento del CD</label>
    <type>Date</type>
</CustomField>