force-app/main/default/objects/Account/fields/Fecha_en_la_que_cumple_10_meses__c.field-meta.xml
<CustomField>
    <fullName>Fecha_en_la_que_cumple_10_meses__c</fullName>
    <formula>ADDMONTHS(CreatedDate  ,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha en la que cumple 10 meses</label>
    <type>Date</type>
</CustomField>