force-app/main/default/objects/Account/fields/Fecha_Inactivacion_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inactivacion_Cliente__c</fullName>
    <label>Fecha Inactivación Cliente</label>
    <type>Date</type>
</CustomField>