force-app/main/default/objects/Account/fields/Fecha_Inactivacion_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inactivacion_Sucursal__c</fullName>
    <label>Fecha Inactivación Sucursal</label>
    <type>Date</type>
</CustomField>