force-app/main/default/objects/Account/fields/Filial_pacientes__c.field-meta.xml
<CustomField>
    <fullName>Filial_pacientes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filial</label>
    <referenceTo>Filial__c</referenceTo>
    <relationshipLabel>Pacientes</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>