force-app/main/default/objects/Account/fields/Filial_profesionales_de_la_salud__c.field-meta.xml
<CustomField>
    <fullName>Filial_profesionales_de_la_salud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Para profesionales de la salud. Se crean dos campos de búsqueda al mismo objeto porque son para dos tipos de registro distintos, y así aparecen dos listas relacionadas en el formato de filial, uno de prof de la salud y otro de pacientes.</description>
    <label>Filial</label>
    <referenceTo>Filial__c</referenceTo>
    <relationshipLabel>Profesionales de la salud</relationshipLabel>
    <relationshipName>Profesionales_de_la_salud</relationshipName>
    <type>Lookup</type>
</CustomField>