force-app/main/default/objects/Account/fields/Financiador_1__c.field-meta.xml
<CustomField>
    <fullName>Financiador_1__c</fullName>
    <label>Financiador 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>