force-app/main/default/objects/Account/fields/Financiador_2__c.field-meta.xml
<CustomField>
    <fullName>Financiador_2__c</fullName>
    <label>Financiador 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>