force-app/main/default/objects/Account/fields/Financiador_3__c.field-meta.xml
<CustomField>
    <fullName>Financiador_3__c</fullName>
    <label>Financiador 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>