force-app/main/default/objects/Account/fields/Forma_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_compra__c</fullName>
    <label>Forma de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directa</fullName>
            </value>
            <value>
                <fullName>No directa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>