force-app/main/default/objects/Account/fields/Formulas_actuales__c.field-meta.xml
<CustomField>
    <fullName>Formulas_actuales__c</fullName>
    <label>Fórmulas actuales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>