force-app/main/default/objects/Account/fields/Funcion_del_APM__c.field-meta.xml
<CustomField>
    <fullName>Funcion_del_APM__c</fullName>
    <formula>Owner.Funcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Función del APM</label>
    <type>Text</type>
</CustomField>