force-app/main/default/objects/Account/fields/Futuro_especialista__c.field-meta.xml
<CustomField>
    <fullName>Futuro_especialista__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Futuro especialista</label>
    <type>Checkbox</type>
</CustomField>