force-app/main/default/objects/Account/fields/Genero__c.field-meta.xml
<CustomField>
    <fullName>Genero__c</fullName>
    <label>Genero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genero</valueSetName>
    </valueSet>
</CustomField>