force-app/main/default/objects/Account/fields/Gira__c.field-meta.xml
<CustomField>
    <fullName>Gira__c</fullName>
    <label>Gira</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>