force-app/main/default/objects/Account/fields/Grupo_de_visitador_medico__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_visitador_medico__c</fullName>
    <formula>Owner.Funcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo de visitador médico</label>
    <type>Text</type>
</CustomField>