force-app/main/default/objects/Account/fields/Grupo_Obra_Social__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Obra_Social__c</fullName>
    <label>Grupo Obra Social</label>
    <length>50</length>
    <type>Text</type>
</CustomField>