force-app/main/default/objects/Account/fields/Habla_ingles__c.field-meta.xml
<CustomField>
    <fullName>Habla_ingles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habla inglés</label>
    <type>Checkbox</type>
</CustomField>