force-app/main/default/objects/Account/fields/Habla_o_entiende_el_idioma_de_actividad__c.field-meta.xml
<CustomField>
    <fullName>Habla_o_entiende_el_idioma_de_actividad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habla o entiende el idioma de actividad</label>
    <type>Checkbox</type>
</CustomField>