force-app/main/default/objects/Account/fields/Hasta_Horas_1__c.field-meta.xml
<CustomField>
    <fullName>Hasta_Horas_1__c</fullName>
    <label>Hora hasta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Horas</valueSetName>
    </valueSet>
</CustomField>