force-app/main/default/objects/Account/fields/Hasta_Intervalo__c.field-meta.xml
<CustomField>
    <fullName>Hasta_Intervalo__c</fullName>
    <label>Hasta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>