force-app/main/default/objects/Account/fields/Hasta_Jueves__c.field-meta.xml
<CustomField>
    <fullName>Hasta_Jueves__c</fullName>
    <label>Hasta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9:00</fullName>
            </value>
            <value>
                <fullName>9:30</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>13:30</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>14:30</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>15:30</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>16:30</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>17:30</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>18:30</fullName>
            </value>
            <value>
                <fullName>19:00</fullName>
            </value>
            <value>
                <fullName>19:30</fullName>
            </value>
            <value>
                <fullName>20:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>